# imageEdit

./: .gitignore  README.md
app/: package-lock.json  package.json  vite.config.ts
app/backend/: backend.spec  pyproject.toml  requirements.txt  run_server.py
app/backend/app/: main.py
app/backend/app/routers/: background_removal.py  batch.py  export.py  models.py
app/backend/app/services/: batch_processor.py  image_processor.py  model_manager.py  naming.py
app/backend/tests/: test_export.py  test_image_processor.py  test_naming.py
app/electron/: main.cjs  preload.cjs
app/src/: App.tsx  index.css
app/src/api/: client.ts
app/src/components/: ControlPanel.tsx  DropZone.tsx  PreviewCanvas.tsx  QueuePanel.tsx  SettingsPanel.tsx  Toolbar.tsx
app/src/store/: index.ts
app/src/types/: index.ts
openspec/: config.yaml
