[project]
name = "game-asset-processor-backend"
version = "0.1.0"
description = "Python backend for Game Asset Processor - AI-powered background removal"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "rembg[gpu]>=2.0.50",
    "pillow>=10.0.0",
    "opencv-python-headless>=4.8.0",
    "python-multipart>=0.0.6",
    "sse-starlette>=1.8.0",
    "pydantic>=2.0.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
